add permission,fix style bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
             keyPassword "saberrrc"
         }
     }
+//    lintOptions {
+//        abortOnError false
+//    }
 
     buildTypes {
         debug {
