--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,25 +147,24 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     /*glide + okhttp3-integration*/
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar'
     implementation 'jp.wasabeef:glide-transformations:2.0.2'
     /*eventbus*/
     implementation 'org.greenrobot:eventbus:3.1.1'
     /*LeakCanary*/
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
     //banner
     implementation 'com.youth.banner:banner:1.4.10'
-    //最新版本
     //自动获取短信验证码
-    implementation 'tech.michaelx.authcode:authcode:1.0.0'
+//    implementation 'tech.michaelx.authcode:authcode:1.0.0'
 
     //1.1.0 API改动过大，老用户升级需谨慎
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-5'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-5'//没有使用特殊Header，可以不加这行
     //weex
-    implementation 'com.alibaba:fastjson:1.2.47'
-    implementation 'com.taobao.android:weex_sdk:0.5.1@aar'
+//    implementation 'com.alibaba:fastjson:1.2.47'
+//    implementation 'com.taobao.android:weex_sdk:0.16.0@aar'
     //fastjson
     implementation 'com.alibaba:fastjson:1.2.47'
     //FileDownloader
